# HeavyBall

./: .bashrc  .gitignore  LICENSE  README.md  analyse_benchmarks.py  benchmark_conditioning_analysis.csv  benchmark_conditioning_analysis_combined.csv  benchmark_results.md  benchmark_results_W_scheduled_and_EMAScheduled.md  benchmark_results_gamma_schedule.md  build.sh  condition_number_results.md  condition_numbers_list.md  environment.yml  hard_results.md  landscape.md  medium_results.md  parsed_experiments_CIFAR10_wide.py  parsed_experiments_MNIST.py  parsed_experiments_Tolstoi.py  pre-commit.yaml  pyproject.toml  setup.py  slurm.sh  slurm_save.md  test_opt.py
benchmark/: CIFAR10.py  CIFAR100.py  CIFAR100_Wide_RESNET.py  CIFAR10_less_params.py  CIFAR10_wide.py  Deep_MLP.py  MNIST.py  MNIST_comparison_plot.py  MNIST_less_params.py  MNIST_test_optimizers.py  MNIST_validating.py  NeRF.py  OGBM.py  OGBM_memory.py  PINN.py  README.md  SVHN.py  SVHN_less_params  SVHN_less_params.py  Tolstoi_RNN.py  Tolstoi_RNN_new.py  absolute_varying_scale.py  adversarial_gradient.py  batch_size_scaling.py  beale.py  benchmark_results.md  benchmark_runner.py  car_cfd_transolver.py  car_cfd_transolver_copy.py  char_rnn.py  class_imbalance_rare.py  constrained_optimization.py  constrained_optimization_log.py  constrained_optimization_relu.py  create_hiker_analogy_diagram.py  discontinuous_gradient.py  dynamic_landscape.py  exploding_gradient.py  fastMRI copy.py  fastMRI.py  (+68 more)
benchmark_old/: MNIST_less_params.py  MNIST_test_optimizers.py  SVHN.py  SVHN_less_params.py  benchmark_runner.py  constrained_optimization.py  download_datasets.py  fastMRI.py  loss_contour.py  minimax.py  noisy_matmul.py  plateau_navigation.py  plot_loss_comparison.py  plot_runner_results.py  powers.py  quadratic_varying_target.py  saddle_point.py  scale_invariant.py  simple_quadratic.py  temp.py  wide_linear.py  xor_sequence.py  xor_spot_rnn.py
benchmark_results/: benchmark_results_AdamW.md  benchmark_results_MARS.md  benchmark_results_SGD.md  benchmark_results_ema.md  benchmark_results_sf.md
docs/: benchmark.md  psgd_efficiency.md
examples/: autoencoder.py  lerp_updates.py  lra.py  modify_functions.py  soap.py
heavyball/: __init__.py  cached_delayed_psgd_kron.py  cached_psgd_kron.py  chainable.py  delayed_psgd.py  foreach_adamw.py  foreach_adopt.py  foreach_laprop.py  foreach_sfadamw.py  foreach_soap.py  foreach_solp.py  helpers.py  p_adam.py  palm_foreach_sfadamw.py  palm_foreach_soap.py  palm_foreach_solp.py  precond_schedule_foreach_soap.py  (+8 more)
(+268 files in other folders)
